--- a/code/project/templates/login/login.html
+++ b/code/project/templates/login/login.html
@@ -24,9 +24,9 @@
 					<p class="message">Não registrado? <a href="/register.html">Crie uma conta</a></p>
 				</form>
 			</div>
-		</div>
-		<div style="margin-left: 42%">
-			{% include "messages/messages.html" %}
+            <div class="container">
+    			{% include "messages/messages.html" %}
+            </div>
 		</div>
 		<div class="footer">
 
