--- a/code/project/templates/base/head.html
+++ b/code/project/templates/base/head.html
@@ -3,6 +3,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Homepage</title>
 
+ <!-- Select2 -->
+ <link rel="stylesheet" href="{% static 'dist/plugins/select2/css/select2.min.css' %}">  
+ <link rel="stylesheet" href="{% static 'dist/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css' %}">
+
+
 <!-- Google Font: Source Sans Pro -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 <!-- Font Awesome -->
@@ -13,3 +18,5 @@
 <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}">
 <!---->
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css"/>
+
