--- a/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_delete.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_delete.html
@@ -25,11 +25,7 @@
             </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          
-          <form action="" method="post">
-              {% csrf_token %}
-              <button type="submit" class="btn btn-primary">Apagar</button>
-          </form>
+          <a href="{% url 'lawsuit:lawsuit_value_delete' lawsuit.pk lawsuit_value.pk %}"  class="btn btn-primary">Apagar</a>
         </div>
       </div>
     </div>
