--- a/code/processo/templates/lawsuit_create.html
+++ b/code/processo/templates/lawsuit_create.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-
+{% load select2tag %}
 {% load static %}
 {% block title %}<h1 class="mont-serrat">Processo</h1>{% endblock title %}
 {% block breadcrumb %}
@@ -21,12 +21,10 @@
                 <form action="{% url 'lawsuit:lawsuit_create' %}" method="POST">
             {% endif %}
             {% for field in form %}
-                {% csrf_token %}
-                <div class="form-group">
+            {% csrf_token %}
+            <div class="form-group">
                     <label for="inputName" for="{{ field.id_for_label }}">{{ field.label }}</label>
-                    <div>
                         {{field}}
-                    </div>
                     <small id="passwordHelpBlock" class="form-text text-muted">
                         {{field.help_text}}
                     </small>
