--- a/code/processo/templates/lawsuit_detail/lawsuit_infos.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_infos.html
@@ -1,5 +1,6 @@
 {% include "lawsuit_detail/lawsuit_modals/lawsuit_infos_delete.html" %}
 {% include "lawsuit_detail/lawsuit_modals/lawsuit_finalize_modal.html" %}
+{% include "lawsuit_detail/lawsuit_modals/lawsuit_reset_finalize_modal.html" %}
 <div class="invoice p-3 mb-3">
     <div class="row">
         <div class="col-12">
@@ -101,21 +102,24 @@
             </a>
         </div>
         <div class="form-group" style="margin-left: 10px">
-            <button class="btn btn-block btn-danger mont-serrat" data-toggle="modal" data-target="#lawsuit-delete-modal">
+            <a class="btn btn-block btn-danger" data-toggle="modal" data-target="#lawsuit-delete-modal">
                 Apagar
-            </button>   
+            </a>   
         </div>     
         <div class="form-group" style="margin-left: 10px">
             {% if lawsuit.finalizado %}
-                <button type="button" disabled class="btn btn-block btn-secondary mont-serrat">
+                <a type="button" disabled class="btn btn-block btn-secondary">
                     Finalizado
-                </button>
-            {% else %}
-                <button type="button" class="btn btn-block btn-success mont-serrat" data-toggle="modal" data-target="#lawsuit-finalize-modal">
+                </a>
+                <a type="button" class="text-sm text-primary" data-toggle="modal" data-target="#lawsuit-reset-finalize-modal">
+                    Editar situação
+                </a>
+                {% else %}
+                <a type="button" class="btn btn-block btn-success" data-toggle="modal" data-target="#lawsuit-finalize-modal">
                     Finalizar
-                </button>
-            {% endif %}
-        </div>
+                </a>
+                {% endif %}
+            </div>
     </div>
 
 </div>
