--- a/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_finalize_modal.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_finalize_modal.html
@@ -7,11 +7,11 @@
                 </h1>
             </div>
             <div class="modal-body">
-                <span class="text">Codigo do Processo: {{ lawsuit.codigo_processo }}</span><br>
+                <span class="text">O processo de codigo {{ lawsuit.codigo_processo }} será finalizado</span><br>
             </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          <form action="" method="post">
+          <form action="{% url 'lawsuit:lawsuit_finalize' lawsuit.pk %}" method="post">
               {% csrf_token %}
               <button type="submit" class="btn btn-success">Finalizar</button>
           </form>
