--- a/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_modal.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_modal.html
@@ -1,6 +1,7 @@
 <div class="modal fade" id="values-modal" style="display: none;" aria-hidden="true">
     <div class="modal-dialog">
-        <form method="POST">
+        <form method="POST" action="{% url 'lawsuit:lawsuit_value_create' lawsuit.pk %}">
+            {% csrf_token %}
             <div class="modal-content">
                 <div class="modal-header" >
                     <h4 class="modal-title" >
