--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -32,7 +32,7 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Advogados</th>
+                        <th>Advogado</th>
                         <th></th>
                         <th>Codigo do Processo</th>
                         <th>Cliente</th>
@@ -48,10 +48,13 @@
                         
                         <td style="width: 2px;">
                             {% if lawsuit.advogado_responsavel.image %}
-                            <img src="{{ lawsuit.advogado_responsavel.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
-                                {% if lawsuit.colaborador %}
-                                    <img src="{{ lawsuit.colaborador.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
-                                {% endif %}
+                                <img src="{{ lawsuit.advogado_responsavel.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
+                            {% else %}
+                                <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
+                            {% endif %}
+
+                            {% if lawsuit.colaborador.image %}
+                                <img src="{{ lawsuit.colaborador.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% else %}
                                 <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% endif %}
@@ -62,7 +65,7 @@
                         <td>{{ lawsuit.parte_adversa }}</td>
                         <td>{{ lawsuit.iniciado }}</td>
                         <td>{%if lawsuit.finalizado%} {{ lawsuit.finalizado }} {% else %} Em andamento {%endif%} </td>
-                        <td><a href="{% url 'lawsuit:lawsuit_detail' lawsuit.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
+                        <td><a href="{% url 'lawsuit:lawsuit_delete' lawsuit.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
                     <tr>
                     {% endfor %}
                 </tbody>
