--- a/code/processo/templates/lawsuit_detail/lawsuit_infos.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_infos.html
@@ -90,8 +90,12 @@
         <div class="col-sm-3 invoice-col">
             <strong class="mont-serrat">Assunto</strong><br>
             {{ lawsuit.assunto }}<br>
+        </div>
+
+        <div class="col-sm-12 invoice-col">
             <strong class="mont-serrat">Observações</strong><br>
             {{ lawsuit.observacoes }}<br>
+            <br>
         </div>
     </div>
 
