--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -10,8 +10,8 @@
 {% block content %}
 <div class="container-fluid">
     <div class="card">
-        <form action="{% url 'lawsuit:lawsuit_list' %}" method="get">
-            <div class="card-header">
+        <div class="card-header">
+            <form action="{% url 'lawsuit:lawsuit_list' %}" method="get">
                 <div class="input-group">
                     <a href="{% url 'lawsuit:lawsuit_create' %}" class="btn-lg btn-success">
                         Criar Processo
@@ -26,8 +26,8 @@
                         </button>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
         <div class="card-body p-0">
             <table class="table">
                 <thead>
@@ -39,13 +39,12 @@
                         <th>Parte Adversa</th>
                         <th>Iniciado</th>
                         <th>Finalizado</th>
-                        
+                        <th>Apagar</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for lawsuit in page.object_list %}
                     <tr>
-                        
                         <td style="width: 2px;">
                             {% if lawsuit.advogado_responsavel.image %}
                                 <img src="{{ lawsuit.advogado_responsavel.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
@@ -65,8 +64,9 @@
                         <td>{{ lawsuit.parte_adversa }}</td>
                         <td>{{ lawsuit.iniciado }}</td>
                         <td>{%if lawsuit.finalizado%} {{ lawsuit.finalizado }} {% else %} Em andamento {%endif%} </td>
-                        <td><a href="{% url 'lawsuit:lawsuit_delete' lawsuit.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
-                    <tr>
+                        <td><a href="" data-toggle="modal" data-target="#lawsuit-delete-modal-{{lawsuit.pk}}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
+                        {% include "lawsuit_detail/lawsuit_modals/lawsuit_delete.html" %}
+                    </tr>
                     {% endfor %}
                 </tbody>
             </table>
