--- a/code/processo/templates/lawsuit_detail/lawsuit_files.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_files.html
@@ -10,7 +10,7 @@
                     <span>
                         &nbsp  &nbsp
                     </span>
-                    <input type="search" class="form-control form-control-md" name="q_files" placeholder="Pesquisar processo">
+                    <input type="search" class="form-control form-control-md" required name="q_files" placeholder="Pesquisar processo">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-md btn-default">
                             <i class="fa fa-search"></i>
