--- a/code/processo/templates/lawsuit_detail/lawsuit_infos.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_infos.html
@@ -47,7 +47,7 @@
     </div>
     <hr>
     
-    <div class="row invoice-info">
+    <div class="row invoice-info" style="margin: 10px" >
         <div class="col-sm-3 invoice-col">
             <strong class="mont-serrat">Cliente</strong><br>
             <li>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="row" >
-        <div class="form-group" >
+        <div class="form-group" style="margin-left: 10px">
             <a href="{% url 'lawsuit:lawsuit_edit' lawsuit.pk %}" type="button" class="btn btn-block btn-primary mont-serrat">
                 Editar
             </a>
