--- a/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_modal.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_modal.html
@@ -14,11 +14,11 @@
                     </div>
                     <div class="form-group form-inline">
                         <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="lawsuit-gain-radio-create-1" name="customRadioInline" class="custom-control-input">
+                            <input type="radio" id="lawsuit-gain-radio-create-1" name="ganho" class="custom-control-input">
                             <label class="custom-control-label" for="lawsuit-gain-radio-create-1">Ganho</label>
                           </div>
                           <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" id="lawsuit-gain-radio-create-2" name="customRadioInline" class="custom-control-input">
+                            <input type="radio" id="lawsuit-gain-radio-create-2" name="ganho" class="custom-control-input">
                             <label class="custom-control-label" for="lawsuit-gain-radio-create-2">Custo</label>
                           </div>
                     </div>
