--- a/code/processo/templates/lawsuit_detail/lawsuit_values.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_values.html
@@ -10,7 +10,7 @@
                     <span>
                         &nbsp  &nbsp
                     </span>
-                    <input type="search" class="form-control form-control-md" name="q_values" placeholder="Pesquisar valores de processo ">
+                    <input value="{{ request.GET.q_values }}" required type="search" class="form-control form-control-md" name="q_values" placeholder="Pesquisar valores de processo ">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-md btn-default">
                             <i class="fa fa-search"></i>
@@ -27,6 +27,8 @@
                         <th>Advogado</th>
                         <th>Valor</th>
                         <th>Criado</th>
+                        <th>Editar</th>
+                        <th>Apagar</th>
                     </tr>
                 </thead>
                 <tbody>
