--- a/code/project/templates/base/scripts.html
+++ b/code/project/templates/base/scripts.html
@@ -47,6 +47,10 @@
 
     $(".phone").inputmask({"mask": "(99) 99999-9999"});
 
+    $(".cnpj").inputmask({"mask": "99.999.999/9999-99"});
+    $(".cpf").inputmask({"mask": "999.999.999-99"});
+    $(".cep").inputmask({"mask": "99999-999"});
+
     $('[data-mask]').inputmask({ placeholder: '__/__/____' })
 
     $('#reservationdatetime').datetimepicker({ icons: { time: 'far fa-clock' } });
