/ to default and lawyer picture

--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -10,10 +10,14 @@
 
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="{% static 'dist/img/images/resized.jpg' %}" class="img-circle elevation-2" alt="User Image">
+                {% if request.user.lawyer_user.first.image %}
+                <img src="{{request.user.lawyer_user.first.image.url}}" class="img-circle elevation-2" alt="User Image">
+                {% else %}
+                    <img src="{% static 'dist/img/images/unknown_user.jpg' %}" class="img-circle elevation-2" alt="User Image">
+                {% endif %}
             </div>
             <div class="info">
-                <a href="#" class="d-block"> Dr(a) {{ request.user.username }}</a>
+                <a href="#" class="d-block"> Dr(a) {{ request.user.lawyer_user.first.nome }}</a>
             </div>
         </div>
 
