--- a/code/cliente/templates/client_list.html
+++ b/code/cliente/templates/client_list.html
@@ -13,7 +13,7 @@
 
 <div class="card card-solid">
     <div class="card-header">
-        <form action="{% url 'client:client_create' %}" method="get">
+        <form action="{% url 'client:client_list' %}" method="get">
             <div class="input-group">
                 <a href="{% url 'client:client_create' %}" class="btn-lg btn-success">
                     Criar Cliente
