--- a/code/parte_adversa/templates/adverse_part_list.html
+++ b/code/parte_adversa/templates/adverse_part_list.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="card card-solid">
     <div class="card-header">
-        <form action="{% url 'adverse_part:adverse_part_create' %}" method="get">
+        <form action="{% url 'adverse_part:adverse_part_list' %}" method="get">
             <div class="input-group">
                 <a href="{% url 'adverse_part:adverse_part_create' %}" class="btn-lg btn-success">
                     Criar Parte Adversa
