--- a/code/project/templates/base/body/footer.html
+++ b/code/project/templates/base/body/footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <div class="float-right d-none d-sm-block">
-        <b>Version</b> 3.2.0
+        <b>Versão</b> 0.0.1 Beta
     </div>
-<strong>Copyright &copy; 2022-2023 <a href="#">MacedoWeb</a>.</strong> Todos direitos reservados á <strong>MacedoWeb</strong>.
+&copy; Macedo e Azevedo Advogados Associados. 2023. Desenvolvido por <a target="_blank" href="https://www.linkedin.com/in/macwdo/"><b>Danilo Macedo</b></a>.
 </footer>
