--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -27,7 +27,7 @@
                     <a href="{% url 'lawsuit:lawsuit_list' %}" class="nav-link sidebar-text">
                         <p>
                             <i class="fas fa-gavel" style="color: #ffffff;"></i>
-                                Processos
+                            &nbsp Processos
                         </p>
                     </a>
                 </li>
@@ -35,7 +35,7 @@
                     <a href="" class="nav-link sidebar-text">
                         <p>
                             <i class="fas fa-user-tie" style="color: #ffffff;"></i>
-                            Advogados
+                            &nbsp Advogados
                         </p>
                     </a>
                 </li>
@@ -43,7 +43,7 @@
                     <a href="#" class="nav-link sidebar-text">
                         <p>
                             <i class="fas fa-users" style="color: #ffffff;"></i>
-                            Registros
+                            &nbsp Registros
                         </p>
                     </a>
                         <ul class="nav nav-treeview" style="display: none; margin-left:20px">
@@ -51,7 +51,7 @@
                                 <a href="{% url 'client:client_list' %}" class="nav-link">
                                     <p>
                                         <i class="fas fa-user" style="color: #ffffff;"></i>
-                                        Cliente
+                                        &nbsp Cliente
                                     </p>
                                 </a>
                             </li>
@@ -59,7 +59,7 @@
                                 <a href="{% url 'adverse_part:adverse_part_list' %}" class="nav-link">
                                     <p>
                                         <i class="fas fa-user-slash" style="color: #ffffff;"></i>
-                                        Parte Adversa
+                                        &nbsp Parte Adversa
                                     </p>
                                 </a>
                             </li>
