--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -52,10 +52,12 @@
                                 <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% endif %}
 
+                            {% if lawsuit.colaborador %}
                             {% if lawsuit.colaborador.image %}
                                 <img src="{{ lawsuit.colaborador.image.url }}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
                             {% else %}
                                 <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 28px; height: 28px;" class="img-circle img-fluid">
+                            {% endif %}
                             {% endif %}
                         </td>
                         <td>{{lawsuit.advogado_responsavel}} </td>
