--- a/code/registry/templates/registry_detail/registry_modals/registry_address_create.html
+++ b/code/registry/templates/registry_detail/registry_modals/registry_address_create.html
@@ -3,7 +3,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">
-                        Novo endereço de registry
+                        Novo endereço de registro
                     </h4>
                 </div>
                 <div class="modal-body">
