--- a/code/registry/templates/registry_detail/registry_modals/registry_contacts_create.html
+++ b/code/registry/templates/registry_detail/registry_modals/registry_contacts_create.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">
-                    Novo contato de registry
+                    Novo contato de registro
                 </h4>
             </div>
             <div class="modal-body">
