--- a/code/registry/templates/registry_detail/registry_address.html
+++ b/code/registry/templates/registry_detail/registry_address.html
@@ -42,7 +42,7 @@
     {% endif %}
     <div>
         <button class="btn btn-success" data-toggle="modal" data-target="#registry-address-create">
-            Criar novo endereço do registry
+            Criar novo endereço de registro
         </button>
     </div>
 </div>
