--- a/code/registry/templates/registry_detail/registry_contacts.html
+++ b/code/registry/templates/registry_detail/registry_contacts.html
@@ -38,7 +38,7 @@
     {% endif %}
     <div>
         <button class="btn btn-success" data-toggle="modal" data-target="#registry-contacts-create">
-            Criar novo contato do registry
+            Criar novo contato de registro
         </button>
     </div>
 </div>
